# Storage/openapi.yml
@@ -91,6 +91,18 @@ paths:
                 properties: 
                   message: 
                     type: string 
+  /health:
+      get:
+        summary: service health status
+        description: service health status
+        operationId: app.get_health
+        responses:
+          '200':
+            description: Returned service status
+          '400':
+            description: service is down
+          '404':
+            description: Not Found
 components: 
   schemas: 
     ticketInfo: 
